fix hidden content on mobile

--- a/styles/voters.module.css
+++ b/styles/voters.module.css
@@ -66,7 +66,7 @@
   justify-content: space-between;
   padding: 0;
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
-  width: 90%;
+  width: 100%;
   height: 11rem;
   margin: auto;
 }
